--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
-
+client/node_modules/
 # testing
 /coverage
 
@@ -17,9 +15,9 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.gitignore
+.vscode
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-node_modules
-
