--- a/package.json
+++ b/package.json
@@ -1,31 +1,37 @@
 {
-  "name": "mern-secure",
+  "name": "react-pantry-chef",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
-    "bcrypt-nodejs": "0.0.3",
-    "bluebird": "^3.5.1",
+    "axios": "^0.18.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "connect-mongo": "^2.0.1",
     "express": "^4.16.2",
-    "jsonwebtoken": "^8.1.1",
-    "mongoose": "^5.0.6",
-    "morgan": "^1.9.0",
+    "express-session": "^1.15.6",
+    "mongoose": "^5.6.4",
+    "morgan": "^1.9.1",
     "passport": "^0.4.0",
-    "passport-jwt": "^3.0.1",
+    "passport-local": "^1.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-materialize": "^3.3.3",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
-    "serve-favicon": "^2.4.5"
+    "react-scripts": "1.1.0",
+    "spectre.css": "^0.5.0",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "api": "nodemon ./server/server.js",
+    "dev": "concurrently \"react-scripts start\" \"nodemon server/server.js\""
   },
   "devDependencies": {
-    "bootstrap": "^4.0.0"
-  }
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.7"
+  },
+  "proxy": "http://localhost:8080"
 }
