--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "connect-mongo": "^2.0.1",
+    "dotenv": "^8.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "mongoose": "^5.6.4",
