--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "api": "nodemon ./server/server.js",
-    "dev": "concurrently \"react-scripts start\" \"nodemon server/server.js\""
+    "dev": "concurrently \"react-scripts start\" \"nodemon server/server.js",
+    "heroku-postbuild": "npm run build"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
