--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "spectre.css": "^0.5.0",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "uniqid": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
