--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ DB_F2FAPIKEY=64163ecfe7d2c2321832cea3563bf507
 DB_F2FSEARCHURL=https://www.food2fork.com/api/search?key=
 DB_F2FRECIPEURL=https://www.food2fork.com/api/get/
 DB_GOOGLEBOOKSEARCHURL=https://www.googleapis.com/books/v1/volumes/
+EDAMAMAPIKEY="app_id=44219422&app_key=960634a5ea7579d610c16b1f8ecc344"
