--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
 DB_F2FAPIKEY2=64163ecfe7d2c2321832cea3563bf507
 DB_F2FAPIKEY=0970e2f332d26a5a797712201d1382b8
-DB_F2FSEARCHURL=https://www.food2fork.com/api/search?key=
-DB_F2FRECIPEURL=https://www.food2fork.com/api/get/
-DB_GOOGLEBOOKSEARCHURL=https://www.googleapis.com/books/v1/volumes/
+DB_F2FSEARCHURL=https://www.edamam.com/api/search?key=
+DB_F2FRECIPEURL=https://www.edamam.com/api/get/
 EDAMAM_APIKEY_1=&app_key=088766c47703a5f9c1bdcb2069f19a79
 EDAMAM_APPID_1=&app_id=fe86e086
 EDAMAM_URL=https://api.edamam.com/search?
