--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-pantry-chef",
   "version": "0.1.0",
-  "private": true,
+  "main": "/server/server.js",
   "dependencies": {
     "axios": "^0.18.1",
     "bcryptjs": "^2.4.3",
@@ -23,17 +23,16 @@
     "styled-components": "^4.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "api": "nodemon ./server/server.js",
-    "dev": "concurrently \"react-scripts start\" \"nodemon server/server.js\"",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server/server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'build/*'\" \"npm run build\"",
+    "build": "cd build && npm run start",
+    "seed": "node scripts/seedDB.js",
+    "install": "cd build && npm install",
     "heroku-postbuild": "npm run build"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.7"
-  },
-  "proxy": "http://localhost:8080/"
+  }
 }
