--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "dev": "concurrently \"react-scripts start\" \"nodemon server/server.js\"",
     "heroku-postbuild": "npm run build"
   },
+  "engines": {
+    "node": "10.3.0"
+  },
   "devDependencies": {
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.7"
