--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,2 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-client/node_modules/
-# testing
-/coverage
-
-# production
-# /build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.gitignore
-.vscode
 .env
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-yarn.lock
-
-#backups only
-Card.js
-CardWrapper.js
-Books.js
-booksController.js
-googleGontroller.js
-
-edamomResults.json
-edamomFull.json
-results.json
-test.js
+node_modules/
