--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "react-pantry-chef",
   "version": "0.1.0",
-  "main": "/server/server.js",
+  "main": "./server/server.js",
+  "engines": {
+    "node": "10.3.0"
+  },
   "dependencies": {
-    "@material-ui/core": "^4.2.0",
-    "@material-ui/icons": "^4.2.1",
+    "@material-ui/core": "^4.0.0-rc.0",
     "axios": "^0.18.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -12,46 +14,25 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-session": "^1.15.6",
+    "if-env": "^1.0.4",
     "mongoose": "^5.6.4",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-materialize": "^3.3.3",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "^3.0.1",
-    "spectre.css": "^0.5.8",
-    "styled-components": "^4.3.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "seed": "node scripts/seedDB.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "api": "nodemon ./server/server.js",
-    "dev": "concurrently \"react-scripts start\" \"nodemon server/server.js\"",
-    "heroku-postbuild": "npm run build"
-  },
-  "engines": {
-    "node": "10.3.0"
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "concurrently": "^4.1.0",
+    "concurrently": "^4.1.1",
     "nodemon": "^1.18.7"
   },
-  "proxy": "http://localhost:8080/",
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "scripts": {
+    "api": "nodemon --ignore ./client/ ./server/server.js",
+    "client": "cd client && npm run start",
+    "build": "cd client && npm run build",
+    "install": "npm install && cd client && npm install",
+    "seed": "node scripts/seedDB.js",
+    "start:all": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:dev": "concurrently nodemon \"nodemon --ignore ./client/\" \"npm run client\"",
+    "start:prod": "node ./server/server.js",
+    "heroku-postbuild": "npm run build"
   }
 }
