--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "api": "nodemon --ignore ./client/ ./server/server.js",
     "client": "cd client && npm run start",
     "build": "cd client && npm run build",
-    "install": "npm install && cd client && npm install",
+    "install": "cd client && npm install",
     "seed": "node scripts/seedDB.js",
     "start:all": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:dev": "concurrently nodemon \"nodemon --ignore ./client/\" \"npm run client\"",
