--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^5.6.4",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react-modal": "^3.9.1"
   },
   "devDependencies": {
     "concurrently": "^4.1.1",
