--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.18.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "clsx": "^1.0.4",
     "connect-mongo": "^2.0.3",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
