images, link, save

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ EDAMAM_APIKEY_1=&app_key=8960634a5ea7579d610c16b1f8ecc344
 EDAMAM_APPID_1=&app_id=44219422
 EDAMAM_URL=https://api.edamam.com/search?
 EDAMAM_EXAMPLE=https://api.edamam.com/search?q=chicken&app_id=fe86e086&app_key=088766c47703a5f9c1bdcb2069f19a79&from=0&to=3&calories=591-722&health=alcohol-free
+EDAMAM_APPID_3=&app_id=a9dc9376
+EDAMAM_APIKEY_3=&app_key=bcd5deb16b4c4b72bc5b83f475ac8518
