--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-session": "^1.15.6",
+    "final-form": "^4.18.2",
     "if-env": "^1.0.4",
     "mongoose": "^5.6.4",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "react-modal": "^3.9.1"
+    "react-final-form": "^6.3.0",
+    "react-modal": "^3.9.1",
+    "validator": "^11.1.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.1",
