--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-materialize": "^3.3.3",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^3.0.1",
+    "react-scroll-to": "^2.0.10",
     "react-tap-event-plugin": "^3.0.3",
     "spectre.css": "^0.5.8",
     "styled-components": "^4.3.2"
