--- a/package.json
+++ b/package.json
@@ -6,27 +6,27 @@
     "node": "10.3.0"
   },
   "dependencies": {
-    "@material-ui/core": "^4.0.0-rc.0",
+    "@material-ui/core": "^4.3.3",
     "axios": "^0.18.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "clsx": "^1.0.4",
     "connect-mongo": "^2.0.3",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.15.6",
-    "final-form": "^4.18.2",
+    "final-form": "^4.18.5",
     "if-env": "^1.0.4",
-    "mongoose": "^5.6.4",
+    "mongoose": "^5.6.10",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react-final-form": "^6.3.0",
-    "react-modal": "^3.9.1",
+    "react-modal": "^3.10.1",
     "validator": "^11.1.0"
   },
   "devDependencies": {
-    "concurrently": "^4.1.1",
+    "concurrently": "^4.1.2",
     "nodemon": "^1.18.7"
   },
   "scripts": {
